test/fail/poly_rec04.v3
//@execute =0
class poly_rec<T> {
	var f: poly_rec<poly_rec<T>>;
	new(arg: int) {
		if (arg > 0) f = poly_rec<poly_rec<T>>.new(arg);
		var i = f;
	}
}
def main() -> int {
	var o = poly_rec<int>.new(-1).f;
	return 0;
}
